--- a/apps/web-business/src/locales/el.json
+++ b/apps/web-business/src/locales/el.json
@@ -84,31 +84,31 @@
             "attendanceRate": "Ποσοστό συμμετοχής",
             "vsYesterday": "σε σχέση με χθες",
             "vsLastMonth": "σε σχέση με τον προηγούμενο μήνα",
-            "last100Classes": "τελευταίες 100 τάξεις",
-            "happeningToday": "Σημερινές Τάξεις",
+            "last100Classes": "τελευταία 100 μαθήματα",
+            "happeningToday": "Σημερινά Μαθήματα",
             "recentFeedback": "Σχόλια Χρηστών",
             "aiInsights": "AI Insights",
-            "noClassesToday": "Δεν έχουν προγραμματιστεί τάξεις για σήμερα",
+            "noClassesToday": "Δεν έχουν προγραμματιστεί μαθήματα για σήμερα",
             "noFeedback": "Δεν υπάρχουν σχόλια ακόμα"
         },
         "calendar": {
             "title": "Ημερολόγιο",
-            "newClass": "Νέα τάξη",
+            "newClass": "Νέο μάθημα",
             "bookingsOpened": "Οι κρατήσεις άνοιξαν με επιτυχία",
             "bookingsClosed": "Οι κρατήσεις έκλεισαν με επιτυχία",
             "failedToUpdateBookingStatus": "Αποτυχία ενημέρωσης κατάστασης κράτησης",
             "scheduleClass": {
-                "title": "Προγραμματισμός Τάξης",
-                "description": "Δημιουργήστε μια νέα τάξη από ένα από τα πρότυπά σας",
+                "title": "Προγραμματισμός Μαθήματος",
+                "description": "Δημιουργήστε ένα νέο μάθημα από ένα από τα πρότυπά σας",
                 "dateTime": "Ημερομηνία & Ώρα",
                 "selectDateTime": "Επιλέξτε ημερομηνία και ώρα",
                 "dateTimeInPast": "Η επιλεγμένη ημερομηνία και ώρα είναι στο παρελθόν.",
-                "classTemplate": "Υπηρεσία",
-                "loadingTemplates": "Φόρτωση υπηρεσιών...",
-                "selectTemplate": "Επιλέξτε μια υπηρεσία",
-                "noTemplatesFound": "Δεν βρέθηκαν υπηρεσίες",
-                "noTemplatesDescription": "Χρειάζεται να δημιουργήσετε υπηρεσίες πριν μπορέσετε να προγραμματίσετε τάξεις",
-                "createTemplates": "Νέες υπηρεσίες",
+                "classTemplate": "Πρότυπο",
+                "loadingTemplates": "Φόρτωση προτύπων...",
+                "selectTemplate": "Επιλέξτε ένα πρότυπο",
+                "noTemplatesFound": "Δεν βρέθηκαν πρότυπα",
+                "noTemplatesDescription": "Χρειάζεται να δημιουργήσετε πρότυπα πριν μπορέσετε να προγραμματίσετε μαθήματα",
+                "createTemplates": "Νέα πρότυπα",
                 "makeRecurring": "Κάντε το επαναλαμβανόμενο",
                 "frequency": "Συχνότητα",
                 "daily": "Καθημερινά",
@@ -119,12 +119,12 @@
                 "selectAtLeastOneDay": "Παρακαλώ επιλέξτε τουλάχιστον μια ημέρα της εβδομάδας.",
                 "scheduling": "Προγραμματισμός...",
                 "scheduleSeries": "Προγραμματισμός Σειράς",
-                "scheduleClassButton": "Προγραμματισμός Τάξης",
-                "createdInstancesSuccess": "Δημιουργήθηκαν {{count}} περιπτώσεις του {{name}}",
+                "scheduleClassButton": "Προγραμματισμός Μαθήματος",
+                "createdInstancesSuccess": "Δημιουργήθηκαν {{count}} μαθήματα του {{name}}",
                 "scheduledSuccess": "Το {{name}} προγραμματίστηκε με επιτυχία!",
-                "failedToSchedule": "Αποτυχία προγραμματισμού τάξης. Παρακαλώ δοκιμάστε ξανά.",
+                "failedToSchedule": "Αποτυχία προγραμματισμού μαθήματος. Παρακαλώ δοκιμάστε ξανά.",
                 "startHidden": "Έναρξη Κρυφά",
-                "startHiddenDescription": "Η νέα τάξη δεν θα είναι ορατή στους χρήστες."
+                "startHiddenDescription": "Το νέο μάθημα δεν θα είναι ορατό στους χρήστες."
             },
             "eventMenu": {
                 "viewBookings": "Προβολή Κρατήσεων",
@@ -134,18 +134,18 @@
                 "delete": "Διαγραφή"
             },
             "editClass": {
-                "title": "Επεξεργασία Τάξης",
+                "title": "Επεξεργασία Μαθήματος",
                 "startTime": "Ώρα Έναρξης",
                 "startTimeRequired": "Η ώρα έναρξης είναι υποχρεωτική",
-                "className": "Όνομα Τάξης",
+                "className": "Όνομα Μαθήματος",
                 "applyToAllFuture": "Εφαρμογή σε όλα τα μελλοντικά συμβάντα",
                 "updating": "Ενημέρωση...",
-                "updateClass": "Ενημέρωση τάξης",
-                "updateClasses": "Ενημέρωση {{count}} τάξεων",
-                "classUpdatedSuccess": "Η τάξη ενημερώθηκε με επιτυχία!",
-                "classesUpdatedSuccess": "Ενημερώθηκαν {{count}} παρόμοιες τάξεις με επιτυχία!",
-                "failedToUpdateClass": "Αποτυχία ενημέρωσης τάξης.",
-                "failedToUpdateClasses": "Αποτυχία ενημέρωσης παρόμοιων τάξεων."
+                "updateClass": "Ενημέρωση μαθήματος",
+                "updateClasses": "Ενημέρωση {{count}} μαθημάτων",
+                "classUpdatedSuccess": "Το μάθημα ενημερώθηκε με επιτυχία!",
+                "classesUpdatedSuccess": "Ενημερώθηκαν {{count}} παρόμοια μαθήματα με επιτυχία!",
+                "failedToUpdateClass": "Αποτυχία ενημέρωσης μαθήματος.",
+                "failedToUpdateClasses": "Αποτυχία ενημέρωσης παρόμοιων μαθημάτων."
             },
             "daysOfWeek": {
                 "monday": "Δευτέρα",
@@ -158,20 +158,20 @@
             }
         },
         "templates": {
-            "title": "Υπηρεσίες",
-            "subtitle": "Δημιουργήστε και διαχειριστείτε τα πρότυπα τάξεων σας για εύκολο προγραμματισμό",
+            "title": "Πρότυπα Μαθημάτων",
+            "subtitle": "Δημιουργήστε και διαχειριστείτε τα πρότυπα μαθημάτων σας για εύκολο προγραμματισμό",
             "noTemplatesYet": "Δεν υπάρχουν πρότυπα ακόμα",
-            "noTemplatesDescription": "Δημιουργήστε το πρώτο σας πρότυπο τάξης για να ξεκινήσετε",
+            "noTemplatesDescription": "Δημιουργήστε το πρώτο σας πρότυπο μαθήματος για να ξεκινήσετε",
             "deleteTemplate": "Διαγραφή Προτύπου",
             "deleteTemplateConfirm": "Είστε σίγουροι ότι θέλετε να διαγράψετε αυτό το πρότυπο; Αυτή η ενέργεια δεν μπορεί να αναιρεθεί.",
             "templateDeletedSuccess": "Το πρότυπο διαγράφηκε με επιτυχία!",
             "failedToDeleteTemplate": "Αποτυχία διαγραφής προτύπου. Παρακαλώ δοκιμάστε ξανά.",
             "loadMore": "Φόρτωση Περισσότερων",
             "loadingMore": "Φόρτωση περισσότερων...",
-            "createTemplate": "Νέα υπηρεσία",
+            "createTemplate": "Νέο Πρότυπο",
             "editTemplate": "Επεξεργασία",
-            "classDetails": "Λεπτομέρειες Τάξης",
-            "classSettings": "Ρυθμίσεις Τάξης",
+            "classDetails": "Λεπτομέρειες Μαθήματος",
+            "classSettings": "Ρυθμίσεις Μαθήματος",
             "bookingRules": "Κανόνες Κράτησης",
             "bookingWindow": "Παράθυρο Κράτησης",
             "refundPolicy": "Πολιτική Επιστροφής",
@@ -185,22 +185,22 @@
                 "amount": "Ποσό ({{currency}})",
                 "earlyBookingApplies": "Η έκπτωση πρώιμης κράτησης ισχύει:",
                 "lastMinuteApplies": "Η έκπτωση τελευταίας στιγμής ισχύει:",
-                "hoursOrMoreBefore": "ώρες ή περισσότερο πριν την έναρξη της τάξης",
-                "hoursOrLessBefore": "ώρες ή λιγότερο πριν την έναρξη της τάξης",
-                "allClassesDiscount": "Όλες οι τάξεις λαμβάνουν έκπτωση {{currency}} {{amount}}.",
-                "earlyBookingDiscount": "Οι τάξεις που κρατούνται {{hours}}+ ώρες νωρίτερα λαμβάνουν έκπτωση {{currency}} {{amount}}.",
-                "lastMinuteDiscount": "Οι τάξεις που ξεκινούν στις επόμενες {{hours}} ώρες λαμβάνουν έκπτωση {{currency}} {{amount}}."
+                "hoursOrMoreBefore": "ώρες ή περισσότερο πριν την έναρξη του μαθήματος",
+                "hoursOrLessBefore": "ώρες ή λιγότερο πριν την έναρξη του μαθήματος",
+                "allClassesDiscount": "Όλα τα μαθήματα λαμβάνουν έκπτωση {{currency}} {{amount}}.",
+                "earlyBookingDiscount": "Τα μαθήματα που κρατούνται {{hours}}+ ώρες νωρίτερα λαμβάνουν έκπτωση {{currency}} {{amount}}.",
+                "lastMinuteDiscount": "Τα μαθήματα που ξεκινούν στις επόμενες {{hours}} ώρες λαμβάνουν έκπτωση {{currency}} {{amount}}."
             },
             "classNamePlaceholder": "π.χ., Αρχάριος Γιόγκα",
             "instructorPlaceholder": "Όνομα εκπαιδευτή",
-            "descriptionPlaceholder": "Περιγράψτε την τάξη...",
+            "descriptionPlaceholder": "Περιγράψτε το μάθημα...",
             "selectCategory": "Επιλέξτε κατηγορία",
             "selectVenue": "Επιλέξτε αίθουσα",
             "selectDuration": "Επιλέξτε διάρκεια",
             "tagsPlaceholder": "Πληκτρολογήστε μια ετικέτα και πατήστε Enter",
             "priceBetween": "Η τιμή πρέπει να είναι μεταξύ €1.00 και €100.00",
             "capacityGreaterThanZero": "Η χωρητικότητα πρέπει να είναι μεγαλύτερη από 0",
-            "classNameRequired": "Το όνομα τάξης είναι υποχρεωτικό",
+            "classNameRequired": "Το όνομα μαθήματος είναι υποχρεωτικό",
             "instructorRequired": "Το όνομα εκπαιδευτή είναι υποχρεωτικό",
             "venueRequired": "Η αίθουσα είναι υποχρεωτική",
             "categoryRequired": "Η κατηγορία είναι υποχρεωτική",
@@ -209,8 +209,8 @@
             "allowWaitlist": "Να επιτρέπεται λίστα αναμονής",
             "waitlistCapacity": "Χωρητικότητα λίστας αναμονής",
             "enableBookingWindow": "Ενεργοποίηση παραθύρου κράτησης",
-            "minHoursBefore": "Ελάχιστες ώρες πριν την τάξη",
-            "maxHoursBefore": "Μέγιστες ώρες πριν την τάξη",
+            "minHoursBefore": "Ελάχιστες ώρες πριν το μάθημα",
+            "maxHoursBefore": "Μέγιστες ώρες πριν το μάθημα",
             "enableRefundPolicy": "Ενεργοποίηση πολιτικής επιστροφής",
             "cancellationWindowHours": "Παράθυρο ακύρωσης (ώρες)",
             "disableBookings": "Απενεργοποίηση κρατήσεων",
@@ -219,24 +219,24 @@
             "lastMinute": "Τελευταία Στιγμή",
             "discount": "Έκπτωση",
             "dialog": {
-                "createTitle": "Νέα υπηρεσία ",
+                "createTitle": "Νέο Πρότυπο",
                 "editTitle": "Επεξεργασία",
-                "className": "Όνομα Τάξης",
-                "classCategory": "Κατηγορία Τάξης",
+                "className": "Όνομα Μαθήματος",
+                "classCategory": "Κατηγορία Μαθήματος",
                 "tags": "Ετικέτες",
                 "colorTheme": "Χρώμα",
                 "openBookings": "Άνοιγμα κρατήσεων",
                 "closeBookings": "Κλείσιμο κρατήσεων",
-                "hoursBeforeClass": "ώρες πριν την τάξη",
+                "hoursBeforeClass": "ώρες πριν το μάθημα",
                 "startWithBookingsDisabled": "Έναρξη με απενεργοποιημένες κρατήσεις",
                 "creating": "Δημιουργία...",
                 "updating": "Ενημέρωση...",
                 "createThisTemplate": "Δημιουργία αυτού του προτύπου",
                 "updateTemplate": "Ενημέρωση Προτύπου",
-                "templateCreatedSuccess": "Το πρότυπο τάξης δημιουργήθηκε με επιτυχία",
-                "templateUpdatedSuccess": "Το πρότυπο τάξης ενημερώθηκε με επιτυχία",
-                "failedToCreateTemplate": "Αποτυχία δημιουργίας προτύπου τάξης.",
-                "failedToUpdateTemplate": "Αποτυχία ενημέρωσης προτύπου τάξης.",
+                "templateCreatedSuccess": "Το πρότυπο μαθήματος δημιουργήθηκε με επιτυχία",
+                "templateUpdatedSuccess": "Το πρότυπο μαθήματος ενημερώθηκε με επιτυχία",
+                "failedToCreateTemplate": "Αποτυχία δημιουργίας προτύπου μαθήματος.",
+                "failedToUpdateTemplate": "Αποτυχία ενημέρωσης προτύπου μαθήματος.",
                 "maxBookingHoursMustBeGreater": "Οι μέγιστες ώρες κράτησης πρέπει να είναι μεγαλύτερες από τις ελάχιστες"
             }
         },
@@ -254,16 +254,16 @@
             "monthlyEarnings": "Μηνιαία Έσοδα",
             "avgBookingPrice": "Μέση Τιμή Κράτησης",
             "allTimeEarnings": "Συνολικά Έσοδα",
-            "classesCompleted": "Ολοκληρωμένες τάξεις",
+            "classesCompleted": "Ολοκληρωμένα μαθήματα",
             "yourRevenueThisMonth": "Τα έσοδά σας αυτόν τον μήνα",
             "averagePerBooking": "Μέσος όρος ανά κράτηση",
             "totalLifetimeRevenue": "Συνολικά έσοδα βιογραφικού",
             "bookingDetails": "Λεπτομέρειες Κρατήσεων",
-            "bookingDetailsDescription": "Αναλυτική ανάλυση όλων των κρατήσεων τάξεων και εσόδων. Οι εγγραφές εμφανίζονται μετά την ολοκλήρωση της τάξης.",
+            "bookingDetailsDescription": "Αναλυτική ανάλυση όλων των κρατήσεων μαθημάτων και εσόδων. Οι εγγραφές εμφανίζονται μετά την ολοκλήρωση του μαθήματος.",
             "noBookingsFound": "Δεν βρέθηκαν κρατήσεις για",
             "totalMonthlyEarnings": "Συνολικά Μηνιαία Έσοδα",
             "tableDate": "Ημερομηνία",
-            "tableClassName": "Όνομα Τάξης",
+            "tableClassName": "Όνομα Μαθήματος",
             "tableConsumer": "Πελάτης",
             "tableGrossPrice": "Ακαθάριστη Τιμή",
             "tableSystemCut": "Προμήθεια Συστήματος",
@@ -301,7 +301,7 @@
             "venueWebsitePlaceholder": "https://example.com",
             "addAnotherVenue": "Νέα Αίθουσα",
             "yourVenues": "Οι Αίθουσές σας",
-            "yourVenuesDescription": "Αυτοί είναι οι χώροι όπου διδάσκετε τις τάξεις σας. Αν όλες οι τάξεις σας γίνονται στην ίδια τοποθεσία, δεν χρειάζεται να προσθέσετε περισσότερες αίθουσες. Μπορείτε να ενημερώσετε την υπάρχουσα αίθουσα σας με νέες λεπτομέρειες, υπηρεσίες που παρέχετε, κ.λπ.",
+            "yourVenuesDescription": "Αυτοί είναι οι χώροι όπου διδάσκετε τα μαθήματά σας. Αν όλα τα μαθήματά σας γίνονται στην ίδια τοποθεσία, δεν χρειάζεται να προσθέσετε περισσότερες αίθουσες. Μπορείτε να ενημερώσετε την υπάρχουσα αίθουσα σας με νέες λεπτομέρειες, υπηρεσίες που παρέχετε, κ.λπ.",
             "noLocationsYet": "Δεν υπάρχουν ακόμη τοποθεσίες",
             "addFirstLocation": "Προσθέστε την πρώτη σας τοποθεσία για να ξεκινήσετε τη διαχείριση των επιχειρηματικών σας χώρων.",
             "createVenue": "Δημιουργία Αίθουσας",
@@ -368,11 +368,11 @@
                 "preferencesSavedSuccess": "Οι προτιμήσεις ειδοποιήσεων αποθηκεύτηκαν με επιτυχία",
                 "failedToSavePreferences": "Αποτυχία αποθήκευσης προτιμήσεων ειδοποιήσεων",
                 "newBooking": "Νέα Κράτηση",
-                "whenCustomerBooks": "Όταν ένας πελάτης κάνει κράτηση για μια τάξη",
+                "whenCustomerBooks": "Όταν ένας πελάτης κάνει κράτηση για ένα μάθημα",
                 "customerCancellation": "Ακύρωση Πελάτη",
                 "whenCustomerCancels": "Όταν ένας πελάτης ακυρώνει την κράτησή του",
                 "businessCancellation": "Ακύρωση Επιχείρησης",
-                "whenYouCancel": "Όταν ακυρώνετε μια τάξη",
+                "whenYouCancel": "Όταν ακυρώνετε ένα μάθημα",
                 "paymentReceived": "Πληρωμή Λήφθηκε",
                 "whenPaymentReceived": "Όταν λαμβάνεται μια πληρωμή",
                 "newReview": "Νέα Αξιολόγηση",
@@ -416,12 +416,12 @@
             "available": "Διαθέσιμα:",
             "waitlist": "Λίστα αναμονής:",
             "noBookings": "Δεν υπάρχουν κρατήσεις ακόμα",
-            "noBookingsDescription": "Αυτή η τάξη δεν έχει κρατήσεις ακόμα.",
+            "noBookingsDescription": "Αυτό το μάθημα δεν έχει κρατήσεις ακόμα.",
             "viewDialog": {
                 "title": "{{className}} Κρατήσεις",
                 "currentBookings": "Τρέχουσες Κρατήσεις",
                 "noBookingsYet": "Δεν υπάρχουν κρατήσεις ακόμα",
-                "noBookingsDescription": "Οι πελάτες δεν έχουν κάνει κράτηση για αυτή την τάξη ακόμα"
+                "noBookingsDescription": "Οι πελάτες δεν έχουν κάνει κράτηση για αυτό το μάθημα ακόμα"
             }
         },
         "messages": {
@@ -446,7 +446,7 @@
             "dayAgo": "{{count}} ημέρα πριν",
             "daysAgo": "{{count}} ημέρες πριν",
             "customer": "Πελάτης",
-            "class": "Τάξη",
+            "class": "Μάθημα",
             "timeTbd": "Ώρα να καθοριστεί",
             "actionBooked": "έκανε κράτηση",
             "actionCancelled": "ακύρωσε",
