--- a/apps/web-business/src/locales/el.json
+++ b/apps/web-business/src/locales/el.json
@@ -23,7 +23,7 @@
         "address": "Διεύθυνση",
         "street": "Οδός",
         "city": "Πόλη",
-        "zipCode": "Ταχυδρομικός Κώδικας",
+        "zipCode": "Τ.Κ.",
         "country": "Χώρα",
         "description": "Περιγραφή",
         "price": "Τιμή",
@@ -305,6 +305,31 @@
             "noLocationsYet": "Δεν υπάρχουν ακόμη τοποθεσίες",
             "addFirstLocation": "Προσθέστε την πρώτη σας τοποθεσία για να ξεκινήσετε τη διαχείριση των επιχειρηματικών σας χώρων.",
             "createVenue": "Δημιουργία Αίθουσας",
+            "venueDialog": {
+                "addVenue": "Νέα Αίθουσα",
+                "editVenue": "Επεξεργασία Αίθουσας",
+                "addVenueTitle": "Νέα Αίθουσα",
+                "editVenueTitle": "Επεξεργασία Αίθουσας",
+                "addVenueDescription": "Προσθέστε μια νέα αίθουσα όπου θα διεξάγονται τα μαθήματά σας.",
+                "editVenueDescription": "Επεξεργασία αίθουσας \"{{name}}\"",
+                "locationName": "Όνομα Τοποθεσίας",
+                "businessCategory": "Κατηγορία Επιχείρησης",
+                "selectBusinessCategory": "Επιλέξτε κατηγορία επιχείρησης",
+                "streetAddress": "Οδός",
+                "servicesOffered": "Υπηρεσίες που Προσφέρονται",
+                "amenities": "Απολαύσεις",
+                "showers": "Ντουζιέρες",
+                "accessible": "Προσβάσιμο",
+                "matsProvided": "Χαλάκια",
+                "createVenueButton": "Δημιουργία αίθουσας",
+                "updateVenueButton": "Ενημέρωση αίθουσας",
+                "creating": "Δημιουργία...",
+                "updating": "Ενημέρωση...",
+                "venueCreatedSuccess": "Η αίθουσα δημιουργήθηκε με επιτυχία",
+                "venueUpdatedSuccess": "Η αίθουσα ενημερώθηκε με επιτυχία",
+                "failedToCreateVenue": "Αποτυχία δημιουργίας αίθουσας.",
+                "failedToUpdateVenue": "Αποτυχία ενημέρωσης αίθουσας."
+            },
             "venueCard": {
                 "amenities": "Απολαύσεις",
                 "noAmenitiesFound": "Δεν βρέθηκαν απολαύσεις",
@@ -333,7 +358,7 @@
                 "failedToRemoveImage": "Αποτυχία αφαίρεσης εικόνας.",
                 "amenityShowers": "Ντουζιέρες",
                 "amenityAccessible": "Προσβάσιμο",
-                "amenityMats": "Στόρωνες"
+                "amenityMats": "Στρώματα"
             },
             "editVenue": "Επεξεργασία Αίθουσας",
             "venueNameRequired": "Το όνομα αίθουσας είναι υποχρεωτικό",
@@ -486,7 +511,7 @@
             "physiotherapy": "Φυσιοθεραπεία",
             "nutrition": "Διατροφή",
             "meditation": "Διαλογισμός",
-            "stretching": "Τέντωμα",
+            "stretching": "Stretching",
             "hiit": "HIIT",
             "zumba": "Ζούμπα",
             "trx": "TRX",
