--- a/apps/web-business/src/locales/en.json
+++ b/apps/web-business/src/locales/en.json
@@ -315,6 +315,31 @@
             "selectCategoryRequired": "Please select a business category",
             "websiteMustStartWithHttp": "Website must start with http:// or https://",
             "descriptionMax2000": "Description must be less than 2000 characters",
+            "venueDialog": {
+                "addVenue": "Add Venue",
+                "editVenue": "Edit Venue",
+                "addVenueTitle": "Add Venue",
+                "editVenueTitle": "Edit Venue",
+                "addVenueDescription": "Add a new venue where your classes will be held.",
+                "editVenueDescription": "Editing \"{{name}}\" venue",
+                "locationName": "Location Name",
+                "businessCategory": "Business Category",
+                "selectBusinessCategory": "Select business category",
+                "streetAddress": "Street Address",
+                "servicesOffered": "Services Offered",
+                "amenities": "Amenities",
+                "showers": "Showers",
+                "accessible": "Accessible",
+                "matsProvided": "Mats Provided",
+                "createVenueButton": "Create venue",
+                "updateVenueButton": "Update venue",
+                "creating": "Creating...",
+                "updating": "Updating...",
+                "venueCreatedSuccess": "Venue created successfully",
+                "venueUpdatedSuccess": "Venue updated successfully",
+                "failedToCreateVenue": "Failed to create venue.",
+                "failedToUpdateVenue": "Failed to update venue."
+            },
             "notifications": {
                 "title": "Notifications",
                 "notificationPreferences": "Notification Preferences",
