--- a/apps/web-business/src/locales/el.json
+++ b/apps/web-business/src/locales/el.json
@@ -317,7 +317,7 @@
                 "selectBusinessCategory": "Επιλέξτε κατηγορία επιχείρησης",
                 "streetAddress": "Οδός",
                 "servicesOffered": "Υπηρεσίες που Προσφέρονται",
-                "amenities": "Απολαύσεις",
+                "amenities": "Παροχές",
                 "showers": "Ντουζιέρες",
                 "accessible": "Προσβάσιμο",
                 "matsProvided": "Χαλάκια",
@@ -331,8 +331,8 @@
                 "failedToUpdateVenue": "Αποτυχία ενημέρωσης αίθουσας."
             },
             "venueCard": {
-                "amenities": "Απολαύσεις",
-                "noAmenitiesFound": "Δεν βρέθηκαν απολαύσεις",
+                "amenities": "Παροχές",
+                "noAmenitiesFound": "Δεν βρέθηκαν Παροχές",
                 "services": "Υπηρεσίες",
                 "venueImages": "Εικόνες Αίθουσας",
                 "addImage": "Νέα Εικόνα",
@@ -483,7 +483,7 @@
             "subtitle": "Ας ρυθμίσουμε την επιχείρησή σας για να ξεκινήσετε",
             "businessInformation": "Πληροφορίες Επιχείρησης",
             "locationDetails": "Λεπτομέρειες Τοποθεσίας",
-            "amenities": "Απολαύσεις",
+            "amenities": "Παροχές",
             "services": "Υπηρεσίες",
             "businessNameRequired": "Το όνομά της επιχείρησης είναι υποχρεωτικό",
             "emailRequired": "Το email είναι υποχρεωτικό",
