--- a/apps/mobile-consumer/src/locales/en/translation.json
+++ b/apps/mobile-consumer/src/locales/en/translation.json
@@ -335,7 +335,7 @@
         "buyNow": "Buy now",
         "processing": "Processing...",
         "topUpCredits": "Top-up your credits balance instantly",
-        "creditsValid": "Credits are valid for 3 months after issuing. Best for occasional bookings.",
+        "creditsValid": "Credits are valid for 3 months after issuing.",
         "quickBuy": "Quick buy",
         "quickBuySubtitle": "Instantly get an amount of credits",
         "buyCreditsButton": "Buy credits",
