Make cancel messages for specific

--- a/apps/mobile-consumer/src/locales/el/translation.json
+++ b/apps/mobile-consumer/src/locales/el/translation.json
@@ -134,6 +134,7 @@
     "bookings": {
         "title": "Κρατήσεις",
         "myBookings": "Οι Κρατήσεις μου",
+        "myBookingsSubtitle": "Δείτε τις προσεχείς και προηγούμενες κρατήσεις",
         "upcoming": "Προσεχείς",
         "past": "Παρελθόντα",
         "history": "Ιστορικό",
@@ -415,7 +416,7 @@
         "bookingFailedMessage": "Αποτυχία κράτησης μαθήματος. Παρακαλώ δοκιμάστε ξανά.",
         "cancelBookingTitle": "Ακύρωση \"{{className}}\";",
         "cancelBookingMessage": "Αυτή η ενέργεια δεν μπορεί να αναιρεθεί. Ενδέχεται να μην λάβετε πλήρη επιστροφή χρημάτων ανάλογα με την πολιτική ακύρωσης.",
-        "keepBooking": "Διατήρηση κράτησης",
+        "keepBooking": "Διατήρηση",
         "bookingCancelled": "Κράτηση ακυρώθηκε",
         "bookingCancelledMessage": "Η κράτησή σας ακυρώθηκε. Οποιαδήποτε εφαρμοστέα επιστροφή χρημάτων θα ακολουθήσει την πολιτική ακύρωσης.",
         "cancellationFailed": "Αποτυχία ακύρωσης",
@@ -431,11 +432,15 @@
             "freeCancelWithoutTime": "Λόγω {{reason}}, μπορείτε να ακυρώσετε αυτό το μάθημα και θα λάβετε πλήρη επιστροφή των credits σας.",
             "freeCancelStatus": "Δωρεάν ακύρωση για {{time}} ({{reason}})",
             "withinWindowWithTime": "Μπορείτε να ακυρώσετε δωρεάν για τα επόμενα {{time}}. Μετά από αυτό, θα λάβετε 50% επιστροφή. Οι απουσίες δεν δικαιούνται επιστροφή.",
-            "withinWindowWithoutTime": "Θα λάβετε πλήρη επιστροφή καθώς ακυρώνετε εντός του παραθύρου ακύρωσης.",
+            "withinWindowWithoutTime": "Θα λάβετε πλήρη επιστροφή των credits σας.",
             "withinWindowStatus": "Δωρεάν ακύρωση για {{time}}",
             "outsideWindow": "Καθώς ακυρώνετε εντός {{hours}} ωρών από το μάθημα, θα λάβετε {{percentage}}% επιστροφή. Οι απουσίες δεν δικαιούνται επιστροφή.",
             "outsideWindowStatus": "{{percentage}}% επιστροφή εάν ακυρωθεί",
             "windowClosed": "Το παράθυρο ακύρωσης έχει κλείσει",
+            "noWindow": "Θα λάβετε πλήρη επιστροφή των credits σας.",
+            "noWindowStatus": "Πλήρης επιστροφή διαθέσιμη",
+            "classStarted": "Αυτό το μάθημα έχει ήδη ξεκινήσει. Η ακύρωση τώρα δεν θα οδηγήσει σε καμία επιστροφή.",
+            "classStartedStatus": "Χωρίς επιστροφή - το μάθημα έχει ξεκινήσει",
             "specialCircumstances": "ειδικές περιστάσεις",
             "specialPrivilege": "ειδικό προνόμιο"
         }
