--- a/apps/mobile-consumer/src/locales/en/translation.json
+++ b/apps/mobile-consumer/src/locales/en/translation.json
@@ -134,6 +134,7 @@
     "bookings": {
         "title": "Bookings",
         "myBookings": "My Bookings",
+        "myBookingsSubtitle": "See upcoming and past bookings",
         "upcoming": "Upcoming",
         "past": "Past",
         "history": "History",
@@ -436,6 +437,10 @@
             "outsideWindow": "As you're cancelling within {{hours}} hours of the class, you'll receive a {{percentage}}% refund. No-shows are not eligible for a refund.",
             "outsideWindowStatus": "{{percentage}}% refund if cancelled",
             "windowClosed": "Cancellation window has closed",
+            "noWindow": "You will receive a full refund of your credits as there is no cancellation window for this class.",
+            "noWindowStatus": "Full refund available",
+            "classStarted": "This class has already started. Cancelling now will not result in any refund.",
+            "classStartedStatus": "No refund - class has started",
             "specialCircumstances": "special circumstances",
             "specialPrivilege": "special privilege"
         }
